--- a/templates/medicines.html
+++ b/templates/medicines.html
@@ -1062,16 +1062,16 @@
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">Doctors</a></li>
-                    <li><a href="">Login</a></li>
                     <li><a href="">Medicines</a></li>
-                    <li><a href="">Services</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </div>
 
         </div>
         <div class="footerbottom">
-            <p>Copyright &copy;2024; Designed by <span class="designer">Rahul & Ayush</span></p>
-            <a href="">Email : Ayushpatel@gmail.com  ||  Rahulchaurasiya@gmail.com</a>
+            <p>Copyright &copy;2024; Designed by <span class="designer">Ayush & Rahul</span></p>
+            <a href="">Email : ayush_patel6223@aksuniversity.com  ||  Rahulchaurasiya@gmail.com</a>
         </div>
     </footer>
 </body>
