--- a/static/styles/contact.css
+++ b/static/styles/contact.css
@@ -16,7 +16,7 @@
 }
 
 *{
-    font-family: 'open sans',sans-serif; 
+    font-family: 'andika';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -80,6 +80,7 @@ nav ul li{
     list-style: none;
     margin: 0 23px;
     letter-spacing: 0px;
+    font-weight: 700;
 }
 
 nav ul li a{
