--- a/static/styles/medicines.css
+++ b/static/styles/medicines.css
@@ -16,6 +16,7 @@
 }
 
 *{
+    font-family: 'andika';
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -84,6 +85,7 @@ nav ul li{
     list-style: none;
     margin: 0 23px;
     letter-spacing: 0px;
+    font-weight: 700;
 }
 
 nav ul li a{
