--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,8 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/cart.css')}}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
+<!-- header setion -->
+    <header>
+
+        <nav>
+            <div class="logo"><img src="/static/image/logo3.png"></div>
+            <div class="company-name">
+                <h2>PHARMA CO</h2>
+            </div>
+            <div class="rightside"></div>
+            <ul>
+                <li><a href="{{url_for('index')}}">Home</a></li>
+                <li><a href="{{url_for('doctors')}}">Doctor</a></li>
+                <li><a href="{{url_for('medicines')}}">Medicines</a></li>
+                <li><a href="{{url_for('about')}}">About</a></li>
+                <li><a href="{{url_for('contact')}}">Contact</a></li>
+                <li><a href="{{url_for('login')}}">Logout</a></li>
+            </ul>
+            <div class="icon">
+                <div class="fa fa-search" id="search-btn"></div>
+                <a href="{{url_for('cart')}}"><div class="fa fa-shopping-cart" id="cart-btn" style="color: black;"></div></a>
+                
+            </div>
+
+        </nav>
+    </header>
 
     <h1>Shopping Cart</h1>
     <div class="container">
@@ -17,7 +47,7 @@
 
                 <div class="item-info">
                     <h3>{{ item.name }}</h3>
-                    <p>Price: ${{ item.price }}</p>
+                    <p>Price: Rs.{{ item.price }}</p>
                     <p>Quantity: {{ item.quantity }}</p>
                 </div>
                 <form action="/remove_item/{{ item.id }}" method="post">
@@ -27,10 +57,43 @@
             {% endfor %}
         </div>
         <div class="cart-summary">
-            <h2>Summary</h2>
-            <p>Total Price: ${{ total_price }}</p>
+            <h3>Summary</h3>
+            <br>
+            <h2>Total Payable Amount</h2> <br>
+            <p>Total Price:  <br>Rs.{{ total_price }}</p>
+            <br><br>
+            <button class="buy-btn">Buy Now</button>
         </div>
     </div>
+
+     <!-- footer section -->
+<footer>
+    <div class="footercontainer">
+        <div class="socialicons">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+        </div>
+        <div class="footernav">
+            <ul>
+                <li><a href="{{url_for('index')}}">Home</a></li>
+                <li><a href="{{url_for('doctors')}}">Doctor</a></li>
+                <li><a href="{{url_for('medicines')}}">Medicines</a></li>
+                <li><a href="{{url_for('about')}}">About</a></li>
+                <li><a href="{{url_for('cart')}}">Cart</a></li>
+                <li><a href="{{url_for('contact')}}">Contact</a></li>
+                <!-- <li><a href="{{url_for('login')}}">Logout</a></li> -->
+            </ul>
+        </div>
+    </div>
+    <div class="footerbottom">
+        <p>Copyright &copy;2024; Designed by <span class="designer">Ayush & Rahul  ||  Phone : +9196784593XX</span></p>
+        <a href="">Email : Ayushpatel@gmail.com  ||  Rahulchaurasiya@gmail.com</a>
+    </div>
+    </footer>
 
 </body>
 </html>
