--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
 
     <!-- header -->
     <header>
+
         <nav>
             <div class="logo"><img src="/static/image/logo3.png"></div>
             <div class="company-name">
-                <h1>PHARMA CO</h1>
+                <h2>PHARMA CO</h2>
             </div>
             <div class="rightside"></div>
             <ul>
@@ -34,6 +37,7 @@
                 <a href="{{url_for('cart')}}"><div class="fa fa-shopping-cart" id="cart-btn" style="color: black;"></div></a>
                 
             </div>
+
         </nav>
     </header>
 
@@ -51,7 +55,7 @@
                 <h3>We are here for your care</h3>
                 <h2>We are the best pharmacy</h2>
                 <p>we are here for 24/7 for your care</p>
-                <button class="appoint"><a href="appointment.html">Make an Appointment</a></button>
+                <button class="appoint"><a href="{{url_for('appointment')}}">Make an Appointment</a></button>
             </div>
 
             <div class="right">
@@ -85,7 +89,6 @@
 
     <!-- footer -->
     <footer>
-        <h3 style="padding-left: 50px;">Developed by:</h3>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -132,3 +135,8 @@
 </body>
 
 </html>
+
+
+
+
+
