loop added in typr script

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,8 +128,9 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: ['"A Healthy Tomorrow starts today"', '"Your Wellness , Our Priority"', '"Nurturing Health , Nurturing You"'],
+            strings: ['"A Healthy Tomorrow starts today"', '"Your Wellness , Our Priority"', '"Nurturing Health , Nurturing You"', '"Trust in Every Prescription"', '"Healing, One Pill at a Time"', '"Delivering Better Health"'],
             typeSpeed: 50,
+            loop: true
         });
     </script>
 </body>
